# tom_regions

./: README.md  pyproject.toml
tom_demoapp/: apps.py  urls.py  views.py
tom_demoapp/migrations/: 0002_alter_demoprofile_demo_field_and_more.py
tom_demoapp/templates/tom_demoapp/: demo_page.html  update_profile.html
tom_demoapp/templates/tom_demoapp/partials/: demo_partial.html  demo_user_list.html  navbar_demo.html  navbar_list_demo.html  profile_demo.html
tom_demoapp/templatetags/: demo_extras.py
tom_regions/: apps.py  models.py  urls.py  views.py
tom_regions/migrations/: 0001_initial.py  0002_alter_demoprofile_demo_field_and_more.py
tom_regions/templates/tom_regions/: demo_page.html  update_profile.html
tom_regions/templates/tom_regions/partials/: navbar_demo.html  navbar_list_demo.html  profile_demo.html
tom_regions/templatetags/: demo_extras.py
