[tool.poetry]
name = "tom-regions"
version = "0.1.0"
description = "A TOMToolkit application."
authors = ["TOMToolkit Team <tomtoolit-maintiners@lco.global>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
tomtoolkit = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
